templates/kubernetes.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <<SERVICE_NAME>>
  labels:
    name: <<SERVICE_NAME>>
spec:
  type: << NodePort | ClusterIP | LoalBalancer | ExternalName >>
  ports:
  - port: <<EXTERNAL_PORT>>
    targetPort: <<INTERNAL PORT>>
  selector:
    name: <<DEPLOYMENT_NAME>>
