templates/kubernetes.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: <<INGRESS_NAME>
  annotations:
    <<ANOTATIONS>>
spec:
  rules:
    - host: <<HOSTNAME OR IP USE TO FILTER INCONING REQUESTS>>
      http:
        paths:
          - path: /
            pathType: <<Prefix || Exact || ImplementationSpecific>>
            backend:
                service:
                    name: <<SERVICE_NAME>>
                    port: <<SERVICE_PORT>>
